add news screen

--- a/locales/languages/en.json
+++ b/locales/languages/en.json
@@ -1570,7 +1570,8 @@
 		"current_initiatives":"current initiatives",
 		"shop_subtitle":"Discover sustainable vendors",
 		"search":"Search",
-		"find_merchants":"Find Merchants"
+		"find_merchants":"Find Merchants",
+		"news":"Latest from BitGreen"
 
 	}
 }
