--- a/locales/languages/en.json
+++ b/locales/languages/en.json
@@ -228,7 +228,7 @@
 	},
 	"drawer": {
 		"send_button": "Send",
-		"receive_button": "Add funds",
+		"receive_button": "Recieve",
 		"coming_soon": "Coming soon...",
 		"wallet": "Wallet",
 		"transaction_history": "Transaction History",
