--- a/locales/languages/en.json
+++ b/locales/languages/en.json
@@ -1610,7 +1610,9 @@
 		"blockchain_explorer":"Blockchian  Explorer",
 		"signup_impact_portal":"Sign up for the impact protal",
 		"signup_impact_others" : "And gain access to the",
-		"email_address":"Email Address"
+		"email_address":"Email Address",
+		"level":"Level {{level}}",
+		"recent_activity":"Recent Activity"
 
 
 	}
