impact history done

--- a/locales/languages/en.json
+++ b/locales/languages/en.json
@@ -1566,7 +1566,8 @@
 		"shop":"Shop",
 		"total_reward":"Total Rewards",
 		"this_week":"This week",
-		"reward_history":"Reward History",
+		"this_month":"Past 30 Days",
+		"impact_history":"Impact History",
 		"impact_initiatives":"Impact initiatives",
 		"impact_learn_more" : "Learn more and get involved",
 		"current_initiatives":"current initiatives",
