add transaction history view

--- a/locales/languages/en.json
+++ b/locales/languages/en.json
@@ -1630,6 +1630,8 @@
 		"services_des":"Connect these services",
 		"authorize":"Authorize",
 		"connect_service":"Connect this service",
-		"token_hint":"Enter your authorization token"
+		"token_hint":"Enter your authorization token",
+		"any":"Any",
+		"reward":"Reward"
 	}
 }
