remove the network select

--- a/locales/languages/en.json
+++ b/locales/languages/en.json
@@ -1711,7 +1711,7 @@
 			"detail_title":"Enter their details",
 			"identifier":"BitGreen network identifier",
 			"name":"Name(optional, if no network identifier)",
-			"address":"BIGT Addresss"
+			"address":"BITG Addresss"
 
 		},
 		"services":"Services",
